Merged in maven-project-runner (pull request #10)
Maven project runner

* Add test case fail message

* Filter test case match on root package

* Improve test case identification

This version walks the stack trace in reverse and uses a regex to match
the test case method.

A new argument to the agent has been added. MethodmapTransformer uses a
package name different from the package loader:

- the package loader loads classes in the target project that should be
  instrumented whereas the transformer uses the package name to look for
  test cases.
- As in the case of dynamic agent tests and static agent tests it may be
  useful to separate them.

But it may be redundant. In any case we can fallback to use the same
package name for both if only one is specified.

* Try a new method of throwing IOException

* Use a mock Path to force IOException

* Refactor

* Buld commit, maven runner + some refactoring

* Update pipeline for maven

* Use gradle image in pipeline

* Rebase on develop

Approved-by: Isak Kristola